# maturin-safer-ffi

./: Cargo.toml  README.md  test.py
centralcrate/: Cargo.toml
centralcrate/src/: lib.rs
pythonsdk/: Cargo.toml  pyproject.toml
pythonsdk/pythonsdk/: __init__.py
pythonsdk/src/: lib.rs
xtask/src/: main.rs
